# powersoftau

./: .gitignore  CLAUDE.md  Cargo.toml  Cargo.toml.old  README.md  ceremony.toml  test.sh
Docs/: Ceremony_&_Contribution_Guidelines.md
powersoftau-cli/: Cargo.toml
powersoftau-core/: Cargo.toml
powersoftau-core/src/: config.rs  keypair.rs  lib.rs  runtime_parameters.rs
powersoftau-tui/: Cargo.toml
powersoftau-tui/src/: main.rs
src/: accumulator.rs  batched_accumulator.rs  keypair.rs  lib.rs  utils.rs
src/bls12_381/: mod.rs
src/bn256/: mod.rs
src/small_bls12_381/: mod.rs
