[workspace]
members = [
    "powersoftau-core",
    "powersoftau-cli",
]
resolver = "2"

[workspace.dependencies]
bellman = { git = 'https://github.com/matterinc/bellman', tag = "0.2.0" }
blake2 = "0.10"
byteorder = "1.5"
crossbeam = "0.4"
generic-array = "0.14.7"
hex-literal = "1.0"
itertools = "0.14"
memmap = "0.7.0"
num_cpus = "1.17"
rand = "0.4"
rust-crypto = "0.2"
typenum = "1.18"