[package]
name = "powersoftau-cli"
version = "0.2.0"
authors = ["Sean Bowe", "Alex Vlasov"]
license = "MIT/Apache-2.0"
edition = "2018"

description = "CLI tools for Powers of Tau MPC ceremony"
documentation = "https://docs.rs/powersoftau/"
homepage = "https://github.com/matter-labs/powersoftau"
repository = "https://github.com/matter-labs/powersoftau"

[dependencies]
powersoftau-core = { path = "../powersoftau-core" }
bellman = { workspace = true }
blake2 = { workspace = true }
byteorder = { workspace = true }
config = { workspace = true }
generic-array = { workspace = true }
hex-literal = { workspace = true }
memmap = { workspace = true }
rand = { workspace = true }
rust-crypto = { workspace = true }
serde = { workspace = true }
typenum = { workspace = true }