[package]
name = "powersoftau-tui"
version = "0.2.0"
authors = ["Sean Bowe", "Alex Vlasov"]
license = "MIT/Apache-2.0"
edition = "2018"

description = "Terminal User Interface for Powers of Tau MPC ceremony"
documentation = "https://docs.rs/powersoftau/"
homepage = "https://github.com/matter-labs/powersoftau"
repository = "https://github.com/matter-labs/powersoftau"

[dependencies]
powersoftau-core = { path = "../powersoftau-core" }
ratatui = { workspace = true }
crossterm = { workspace = true }